# forgemesh

./: .gitignore  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  pyproject.toml
examples/: forgemesh.yaml  openai_client.py  streaming.py
scripts/: smoke-test.sh
src/forgemesh/: __init__.py  __main__.py  auth.py  bench.py  cli.py  config.py  llama_server.py  metrics.py  models.py  server.py
tests/: test_cli_bench.py  test_metrics.py  test_models_pull.py  test_multigpu.py  test_smoke.py
